@@ -1,5 +1,10 @@
 2005-05-09  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-op.c:
+    * libseahorse/seahorse-op.h: Remove old unused functions.
+    
+2005-05-09  Nate Nielsen  <nielsen@memberwebs.com>
+
     * plugins/nautilus/seahorse-tool-files.c: Fix problem with 
     not resolving relative file names properly.
     * plugins/nautilus/seahorse-tool-progress.c: Fix problem with 
